fix price section contents cut off.

--- a/css/main.css
+++ b/css/main.css
@@ -349,12 +349,18 @@ a#about_link {
 }
 /*price*/
 .price .inner {
+    width: 100%;
+    max-width: 100%;
     padding-bottom: 40px;
+}
+.price .section_title {
+    margin-left: 20px;
 }
 .price .price_contents {
     display: block;
     white-space: nowrap;
     overflow-x: scroll;
+    padding-right: 20px;;
 }
 .price .item {
     display: inline-block;
@@ -365,6 +371,7 @@ a#about_link {
     text-align: center;
     border-radius: 10px;
     vertical-align: top;
+    margin-left: 20px;
 }
 .price .item h1 {
     font-size: 26px;
